--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -7,13 +7,6 @@
 </head>
 <body class="materialdesign">
 <th:block th:replace="/flagments/sidebar::sidebar"></th:block>
-<!--<div class="row" id="success-alert">-->
-<!--    <div class="col-lg-12">-->
-<!--        <div class="col-lg-6 alert alert-success">-->
-<!--            ok-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 <div class="admin-dashone-data-table-area">
     <div class="data-table-area mg-b-15">
         <div class="container-fluid">
@@ -33,10 +26,10 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-7" id="error-alert" th:if="${#httpServletRequest.getParameter('error') != null}" >
-                            <div class="col-lg-6 alert alert-danger" th:text="${#httpServletRequest.getParameter('error')}">
+                            <div class="col-lg-7" id="error-alert" th:if="${#httpServletRequest.getParameter('error') != null}" >
+                                <div class="col-lg-6 alert alert-danger" th:text="${#httpServletRequest.getParameter('error')}">
 
-                            </div>
+                                </div>
                         </div>
                         </div>
                         <div class="sparkline13-graph">
@@ -84,8 +77,8 @@
 
                                         <td>
                                             <div class="btn-group project-list-action">
-                                                <a th:href="@{'/admin/user.html?action=edit&id=' + ${user.id}}"> <button class="btn btn-white btn-xs"><i class="fa fa-pencil"></i> Edit</button></a>
-                                                <a th:href="@{'/admin/user.html?action=edit&id=' + ${user.id}}"><button class="btn btn-white btn-action btn-xs"><i class="fa fa-trash-o" aria-hidden="true"> </i>Delete</button></a>
+                                                <a th:href="@{'/admin/user/edit.html?id='+ ${user.id}}"> <button class="btn btn-white btn-xs"><i class="fa fa-pencil"></i> Edit</button></a>
+                                                <a th:href="@{'/admin/user/delete.html?id='+ ${user.id}}"><button class="btn btn-white btn-action btn-xs"><i class="fa fa-trash-o" aria-hidden="true"> </i>Delete</button></a>
                                             </div>
                                         </td>
 
