--- a/src/main/resources/templates/product/edit.html
+++ b/src/main/resources/templates/product/edit.html
@@ -83,7 +83,7 @@
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-6">
-                                                        <img  th:src="@{'/uploads/' + *{pojo.image}}"  class="img-thumbnail">
+                                                        <img  th:src="@{'/uploads/' + '*{pojo.image'}"  class="img-thumbnail">
                                                     </div>
                                                 </div>
                                             </div>
