--- a/src/main/resources/templates/admin/add.html
+++ b/src/main/resources/templates/admin/add.html
@@ -9,11 +9,6 @@
 </head>
 <body class="materialdesign">
 <th:block th:replace="/flagments/sidebar::sidebar"></th:block>
-<style>
-    .mul-select{
-        width: 100%;
-    }
-</style>
 
 <div class="basic-form-area mg-b-15">
     <div class="container-fluid">
@@ -36,13 +31,27 @@
                                 <div class="col-lg-12">
                                     <div class="all-form-element-inner">
                                         <form  th:action="@{/admin/user/add.html}" th:object="${items}" method="post" enctype="multipart/form-data">
+                                            <div class="col-lg-12">
+                                            <div class="col-lg-3"></div>
+                                            <div class="col-lg-9" id="success-alert" th:if="${#httpServletRequest.getParameter('success') != null}" >
+                                                <div class="col-lg-6 alert alert-success" th:text="${#httpServletRequest.getParameter('success')}">
+
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-9" id="error-alert" th:if="${#httpServletRequest.getParameter('error') != null}" >
+                                                <div class="col-lg-6 alert alert-danger" th:text="${#httpServletRequest.getParameter('error')}">
+
+                                                </div>
+                                            </div>
+                                            </div>
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">User Name</label>
                                                     </div>
                                                     <div class="col-lg-9">
-                                                        <input type="text" id="name" th:field="*{pojo.username}" class="form-control" name="username" />
+                                                        <input type="text" id="name" th:field="*{pojo.username}" class="form-control" name="username"  required="required" pattern="[a-z]{1,15}"
+                                                               title="Username should only contain lowercase letters. e.g. john"/>
                                                     </div>
                                                 </div>
                                             </div>
