--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -33,24 +33,25 @@
                                         <form  th:action="@{/admin/user/edit.html}" th:object="${items}" method="post" enctype="multipart/form-data">
                                             <div class="col-lg-12">
                                                 <div class="col-lg-3"></div>
-                                                <div class="col-lg-9" id="success-alert" th:if="${#httpServletRequest.getParameter('success') != null}" >
-                                                    <div class="col-lg-6 alert alert-success" th:text="${#httpServletRequest.getParameter('success')}">
+                                                <div class="col-lg-7" id="success-alert" th:if="${#httpServletRequest.getParameter('success') != null}" >
+                                                    <div class="col-lg-7 alert alert-success" th:text="#{success.update}">
 
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-9" id="error-alert" th:if="${#httpServletRequest.getParameter('error') != null}" >
-                                                    <div class="col-lg-6 alert alert-danger" th:text="${#httpServletRequest.getParameter('error')}">
+                                                <div class="col-lg-7" id="error-alert" th:if="${#httpServletRequest.getParameter('error') != null}" >
+                                                    <div class="col-lg-7 alert alert-danger" th:text="#{error.update}">
 
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="form-group-inner">
+                                                <input type="hidden" id="" th:field="*{pojo.id}" class="form-control" name="id" />
                                                 <div class="row">
                                                     <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">User Name</label>
                                                     </div>
-                                                    <div class="col-lg-9">
-                                                        <input type="text" id="name" th:field="*{pojo.username}" class="form-control" th:text="*{pojo.username}" name="username"  required="required" pattern="[a-z]{1,15}"
+                                                    <div class="col-lg-7">
+                                                        <input type="text" id="name" th:field="*{pojo.username}" class="form-control"  name="username"  required="required" pattern="[a-z]{1,15}"
                                                                title="Username should only contain lowercase letters. e.g. john"/>
                                                     </div>
                                                 </div>
@@ -60,8 +61,9 @@
                                                     <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">PassWord</label>
                                                     </div>
-                                                    <div class="col-lg-9">
-                                                        <input type="text" id="price" th:field="*{pojo.password}" class="form-control" name="password" />
+                                                    <div class="col-lg-7">
+                                                        <input type="password" id="password" th:field="*{pojo.password}" class="form-control" name="password" required="required" />
+                                                        <input type="checkbox" onclick="myFunction()">Show Password
                                                     </div>
                                                 </div>
                                             </div>
@@ -70,8 +72,8 @@
                                                     <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">Email</label>
                                                     </div>
-                                                    <div class="col-lg-9">
-                                                        <input type="text" id="amountTotal" th:field="*{pojo.email}" th:text="*{pojo.email}" class="form-control" name="email" />
+                                                    <div class="col-lg-7">
+                                                        <input type="text" id="amountTotal" th:field="*{pojo.email}"  class="form-control" name="email" required="required"/>
                                                     </div>
                                                 </div>
                                             </div>
@@ -80,7 +82,7 @@
                                                     <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">Roles</label>
                                                     </div>
-                                                    <div class="col-lg-9">
+                                                    <div class="col-lg-7">
                                                         <div class="form-select-list">
                                                             <select class="form-control custom-select-value" name="roles"  th:field="*{pojo.roles}" multiple>
                                                                 <option th:each="obj : ${roles}"
@@ -96,7 +98,7 @@
                                                     <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">Employee</label>
                                                     </div>
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-4">
                                                         <div class="form-select-list">
                                                             <select class="form-control custom-select-value" name="employee"  th:field="*{pojo.employee}" >
                                                                 <option th:each="em : ${employees}"
@@ -105,6 +107,7 @@
                                                             </select>
                                                         </div>
                                                     </div>
+                                                    <div class="col-lg-3"><a href="">Add employee</a></div>
                                                 </div>
                                             </div>
 
@@ -113,10 +116,10 @@
                                                     <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">Status</label>
                                                     </div>
-                                                    <div class="col-lg-9">
+                                                    <div class="col-lg-7">
                                                         <div class="form-select-list">
                                                             <select class="form-control custom-select-value" name="flagDelete" th:field="*{pojo.flagDelete}">
-                                                                <option th:selected="" value="0">Active</option>
+                                                                <option  value="0">Active</option>
                                                                 <option value="1">Not Active</option>
                                                             </select>
                                                         </div>
@@ -128,7 +131,7 @@
                                                 <div class="login-btn-inner">
                                                     <div class="row">
                                                         <div class="col-lg-3"></div>
-                                                        <div class="col-lg-9">
+                                                        <div class="col-lg-7">
                                                             <div class="login-horizental cancel-wp pull-left">
                                                                 <button class="btn btn-sm btn-primary login-submit-cs" type="submit">Save Change</button>
                                                             </div>
@@ -149,6 +152,16 @@
         </div>
     </div>
 </div>
+<script>
+    function myFunction() {
+        var x = document.getElementById("password");
+        if (x.type === "password") {
+            x.type = "text";
+        } else {
+            x.type = "password";
+        }
+    }
+</script>
 
 <th:block th:replace="/flagments/footer::footer"></th:block>
 </body>
