add employee controller

--- a/src/main/resources/templates/admin/add.html
+++ b/src/main/resources/templates/admin/add.html
@@ -221,6 +221,7 @@
             x.type = "password";
         }
     }
+</script>
 
 <th:block th:replace="/flagments/footer::footer"></th:block>
 </body>
