--- a/src/main/resources/templates/flagments/sidebar.html
+++ b/src/main/resources/templates/flagments/sidebar.html
@@ -19,6 +19,10 @@
                                         </li>
                                         <li class="nav-item"><a th:href="@{/category/index.html}" class="nav-link">Category</a>
                                         </li>
+                                        <li class="nav-item"><a th:href="@{/product/index.html}" class="nav-link">Product</a>
+                                        </li>
+                                        <li class="nav-item"><a th:href="@{/supplier/index.html}" class="nav-link">Supplier</a>
+                                        </li>
                                         <li class="nav-item"><a href="#" class="nav-link">Services</a>
                                         </li>
                                         <li class="nav-item dropdown">
