--- a/src/main/resources/templates/product/add.html
+++ b/src/main/resources/templates/product/add.html
@@ -29,15 +29,15 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="all-form-element-inner">
-                                        <form action="#" th:action="@{/product/add.html}" th:object="${items}" method="post" enctype="multipart/form-data">
+                                        <form action="#" th:action="@{/product/add.html}" th:object="${productDto}" method="post" enctype="multipart/form-data">
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">Name</label>
                                                     </div>
                                                     <div class="col-lg-9">
-                                                        <input type="text" id="name" th:field="*{pojo.name}" class="form-control" name="name" />
-                                                        <span th:if="${#fields.hasErrors('pojo.name')}" th:errors="*{pojo.name}" class="badge badge-danger left"></span>
+                                                        <input type="text" id="name" th:field="*{name}" class="form-control" name="name" />
+                                                        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="badge badge-danger left"></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -47,7 +47,8 @@
                                                         <label class="login2 pull-right pull-right-pro">Price</label>
                                                     </div>
                                                     <div class="col-lg-9">
-                                                        <input type="text" id="price" th:field="*{pojo.price}" class="form-control" name="price" />
+                                                        <input type="text" id="price" th:field="*{price}" class="form-control" name="price" />
+                                                        <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="badge badge-danger left"></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -57,7 +58,8 @@
                                                         <label class="login2 pull-right pull-right-pro">Amount total</label>
                                                     </div>
                                                     <div class="col-lg-9">
-                                                        <input type="text" id="amountTotal" th:field="*{pojo.amountTotal}" class="form-control" name="amountTotal" />
+                                                        <input type="text" id="amountTotal" th:field="*{amountTotal}" class="form-control" name="amountTotal" />
+                                                        <span th:if="${#fields.hasErrors('amountTotal')}" th:errors="*{amountTotal}" class="badge badge-danger left"></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -67,21 +69,23 @@
                                                         <label class="login2 pull-right pull-right-pro">Detail</label>
                                                     </div>
                                                     <div class="col-lg-9">
-                                                        <input type="text" id="detail" th:field="*{pojo.detail}" class="form-control" name="detail" />
+                                                        <input type="text" id="detail" th:field="*{detail}" class="form-control" name="detail" />
+                                                        <span th:if="${#fields.hasErrors('detail')}" th:errors="*{detail}" class="badge badge-danger left"></span>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="form-group-inner">
                                                 <div class="row">
-                                                    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+                                                    <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">File Upload System Right</label>
                                                     </div>
-                                                    <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                                                    <div class="col-lg-6">
                                                         <div class="file-upload-inner file-upload-inner-right ts-forms">
                                                             <div class="input append-small-btn">
                                                                 <div class="file-button">
                                                                     Browse
                                                                     <input type="file" onchange="document.getElementById('append-small-btn').value = this.value;" th:field="*{part}" name="part">
+                                                                    <span th:if="${#fields.hasErrors('part')}" th:errors="*{part}" class="badge badge-danger left"></span>
                                                                 </div>
                                                                 <input type="text" id="append-small-btn" placeholder="no file selected">
                                                             </div>
@@ -92,13 +96,29 @@
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-3">
-                                                        <label class="login2 pull-right pull-right-pro">Status</label>
+                                                        <label class="login2 pull-right pull-right-pro">Category</label>
                                                     </div>
                                                     <div class="col-lg-9">
                                                         <div class="form-select-list">
-                                                            <select class="form-control custom-select-value" name="category"  th:field="*{pojo.category}">
-                                                                <option th:each="obj : ${categorys}"
+                                                            <select class="form-control custom-select-value" name="category"  th:field="*{category}">
+                                                                <option th:each="obj : ${categories}"
                                                                         th:value="${obj.categoryId}"
+                                                                        th:text="${obj.name}"></option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group-inner">
+                                                <div class="row">
+                                                    <div class="col-lg-3">
+                                                        <label class="login2 pull-right pull-right-pro">Supplier</label>
+                                                    </div>
+                                                    <div class="col-lg-9">
+                                                        <div class="form-select-list">
+                                                            <select class="form-control custom-select-value" name="category"  th:field="*{supplier}">
+                                                                <option th:each="obj : ${suppliers}"
+                                                                        th:value="${obj.supplierId}"
                                                                         th:text="${obj.name}"></option>
                                                             </select>
                                                         </div>
@@ -112,7 +132,7 @@
                                                     </div>
                                                     <div class="col-lg-9">
                                                         <div class="form-select-list">
-                                                            <select class="form-control custom-select-value" name="account" th:field="*{pojo.status}">
+                                                            <select class="form-control custom-select-value" name="account" th:field="*{status}">
                                                                 <option value="0">Active</option>
                                                                 <option value="1">Not Active</option>
                                                             </select>
