--- a/src/main/resources/templates/flagments/header.html
+++ b/src/main/resources/templates/flagments/header.html
@@ -30,6 +30,35 @@
         <!-- animate CSS
             ============================================ -->
         <link rel="stylesheet" th:href="@{/css/animate.css}">
+        <link rel="stylesheet" th:href="@{/css/animate.css}">
+        <!-- modals CSS
+            ============================================ -->
+        <link rel="stylesheet" th:href="@{/css/modals.css}">
+        <!-- normalize CSS
+            ============================================ -->
+        <link rel="stylesheet" th:href="@{/css/normalize.css}">
+        <!-- touchspin CSS
+            ============================================ -->
+        <link rel="stylesheet" th:href="@{/css/touchspin/jquery.bootstrap-touchspin.min.css}">
+        <!-- datapicker CSS
+            ============================================ -->
+        <link rel="stylesheet" th:href="@{/css/datapicker/datepicker3.css}">
+        <!-- forms CSS
+            ============================================ -->
+        <link rel="stylesheet" th:href="@{/css/form/themesaller-forms.css}">
+        <!-- colorpicker CSS
+            ============================================ -->
+        <link rel="stylesheet" th:href="@{/css/colorpicker/colorpicker.css}">
+        <!-- select2 CSS
+            ============================================ -->
+        <link rel="stylesheet" th:href="@{/css/select2/select2.min.css}">
+        <!-- chosen CSS
+            ============================================ -->
+        <link rel="stylesheet" th:href="@{/css/chosen/bootstrap-chosen.css}">
+        <!-- ionRangeSlider CSS
+            ============================================ -->
+        <link rel="stylesheet" th:href="@{/css/ionRangeSlider/ion.rangeSlider.css}">
+        <link rel="stylesheet" th:href="@{/css/ionRangeSlider/ion.rangeSlider.skinFlat.css}">
         <!-- data-table CSS
             ============================================ -->
         <link rel="stylesheet" th:href="@{/css/data-table/bootstrap-table.css}">
@@ -45,13 +74,15 @@
         <link rel="stylesheet" th:href="@{/css/form/all-type-forms.css}">
         <!-- style CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{/css/style.css}">
+        <link rel="stylesheet" th:href="@{/style.css}">
         <!-- responsive CSS
             ============================================ -->
         <link rel="stylesheet" th:href="@{/css/responsive.css}">
         <!-- modernizr JS
             ============================================ -->
         <script th:src="@{/js/vendor/modernizr-2.8.3.min.js}"></script>
+        <!--        summernote-->
+        <link rel="stylesheet" th:href="@{/css/summernote.css}">
         <!--select2-->
         <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
