--- a/src/main/resources/templates/flagments/header.html
+++ b/src/main/resources/templates/flagments/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block  th:fragment="header">
+    <th:block th:fragment="header">
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="description" content="">
@@ -74,7 +74,7 @@
         <link rel="stylesheet" th:href="@{/css/form/all-type-forms.css}">
         <!-- style CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{/style.css}">
+        <link rel="stylesheet" th:href="@{/css/style.css}">
         <!-- responsive CSS
             ============================================ -->
         <link rel="stylesheet" th:href="@{/css/responsive.css}">
@@ -84,7 +84,7 @@
         <!--        summernote-->
         <link rel="stylesheet" th:href="@{/css/summernote.css}">
         <!--select2-->
-        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet"/>
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </th:block>
