--- a/src/main/resources/templates/employee/edit.html
+++ b/src/main/resources/templates/employee/edit.html
@@ -44,6 +44,7 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <input type="hidden" th:field="*{employeeId}" >
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-3">
@@ -90,7 +91,7 @@
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-3">
-                                                        <label class="login2 pull-right pull-right-pro">Finish Date</label>
+                                                        <label class="login2 pull-right pull-right-pro">BirthDate</label>
                                                     </div>
                                                     <div class="col-lg-5">
                                                         <div class="input-mark-inner mg-b-22">
@@ -104,8 +105,6 @@
                                                     </div>
                                                 </div>
                                             </div>
-
-
                                             <div class="form-group-inner">
                                                 <div class="login-btn-inner">
                                                     <div class="row">
